--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "dev": "ts-node-dev src/app.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.3",
+    "@types/node": "^18.7.13",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "jest": "27.5.1",
     "sqlite3": "^5.0.8",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
-    "typescript": "^4.6.4"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
+  },
+  "repository": "git@github.com:Kenzie-Academy-Brasil-Developers/sprint5-entrega-lorenammp.git",
+  "author": "lorenammp <lorenammpaula@gmail.com>",
+  "dependencies": {
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   }
 }
