--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -23,7 +24,11 @@
   "repository": "git@github.com:Kenzie-Academy-Brasil-Developers/sprint5-entrega-lorenammp.git",
   "author": "lorenammp <lorenammpaula@gmail.com>",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.9",
     "uuid": "^8.3.2"
   }
 }
