--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-POSTGRES_USER="lorena"
-POSTGRES_PWD="1234"
-POSTGRES_DB="users_database"
+DB_USER=admin
+DB_PASSWORD=1234
+DB_HOST=localhost
+DB=users_database
+DB_PORT=5432
